static/css/codingdojo.css
/***************** main ***********************/
body {
  background-color: #f2f3f4;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: 'Raleway', sans-serif;
  display: flex;
  flex-direction: column;
}

a {
  color: #34495e;
}

.button {
  background-color: #a9cce3;
  line-height: 2em;
  text-decoration: none;
  padding: 10px;
  border-radius: 3px;
}

/***************** cards layout ***********************/
.card-row {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

.card {
  background-color: #f2f3f4;
  color: #333;
  padding: 10px;
  margin-top: 0;
  margin-left: 20px;
  margin-bottom: 5px;
  font-size: 1em;
  border-radius: 10px;
  min-height: 300px;
  width: 300px;
}

.card > h2 {
  background-color: #34495e;
  color: #f2f3f4;
  padding-left: 10px;
  line-height: 2em;
}

.card > .content {
  text-align: justify;
  padding: 10px;
}

.card-footer {
  text-align: right;
  padding-right: 10px;
}
/************** header nav ***************************/
header.top {
  padding-left: 20px;
  padding-right: 100px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  background-color: #333333;
  color: #f2f3f4;
  font-family:'Oswald', sans-serif
}

header.top nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
}

header.top nav ul li {
  padding: 10px;
  margin-right: 5px;
}

header.top nav ul li:hover {
  background-color: #34495e;
}

header.top nav ul li a {
  color: #f2f3f4;
}

header.top h1 a {
  color: #f2f3f4;
  text-decoration: none;
}

/************* github ribbon *******************/
.top-right-corner {
  position: absolute;
  top:-40px;
  right:-120px;
  transform-origin: top left;
  transform: rotate(45deg);
}

.ribbon {
  font-family: 'Open Sans Condensed', sans-serif;
  background-color: #C66;
  padding:2px;
  width:240px;
  height:34px;
  line-height:30px;
  text-align:center;
  
}

.seams {
  border-top:2px #EEE;
  border-bottom:2px #EEE;
  border-style:dotted;
}

.ribbon  a {
  font-size: 1.0em;
  letter-spacing: 0.12em; 
  text-shadow: 0 -1px #777;
  text-decoration: none;
  text-align: center;
  color:#EEE;
}

.gradient {
 
  background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.48), transparent);
  background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.34), transparent);
  background-image: -moz-linear-gradient(bottom, rgba(0, 0, 0, 0.35), transparent);
  background-image: -o-linear-gradient(bottom, rgba(0, 0, 0, 0.35), transparent);
  background-image: -ms-linear-gradient(bottom, rgba(0, 0, 0, 0.35), transparent);
  background-image: linear-gradient(bottom, rgba(0, 0, 0, 0.35), transparent);
  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#000000', EndColorStr='#000000');
  
}



/************** page ***************************/
article.page {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

article.page .content {
  padding-top: 60px;
  max-width: 600px;
}

.article-footer {
  width: 100%;
  text-align: right;
}

@media all and (max-width: 800px) {
  article.page .content {
    width: 80%;
  }
}

article.page pre {
  background-color: #e7e7e7;
  padding: 16px;
  border-radius: 3px;
}

